Clean up & fix of spacing utilities + version bump

--- a/_auk-u-spacer.scss
+++ b/_auk-u-spacer.scss
@@ -49,12 +49,12 @@
   margin-bottom: 2rem !important;
 }
 
-.auk-u-mb-8 {
-  margin-bottom: 4rem !important;
+.auk-u-mb-6 {
+  margin-bottom: 3rem !important;
 }
 
-.auk-u-mb-10 {
-  margin-bottom: 6rem !important;
+.auk-u-mb-8 {
+  margin-bottom: 4rem !important;
 }
 
 // Top
@@ -98,14 +98,6 @@
   margin-right: 2rem !important;
 }
 
-.auk-u-mr-5 {
-  margin-right: 2.5rem !important;
-}
-
-.auk-u-mr-6 {
-  margin-right: 3rem !important;
-}
-
 // Left
 
 .auk-u-ml {
@@ -117,7 +109,7 @@
 }
 
 .auk-u-ml-3 {
-  margin-left: 2rem !important;
+  margin-left: 1.5rem !important;
 }
 
 // Margin both horizontal sides
@@ -126,7 +118,7 @@
 }
 
 .auk-u-mx-2 {
-  margin: 0 2rem !important;
+  margin: 0 1rem !important;
 }
 
 .auk-u-mx-3 {
@@ -143,7 +135,7 @@
 }
 
 .auk-u-my-2 {
-  margin: 1.5rem 0 !important;
+  margin: 1rem 0 !important;
 }
 
 .auk-u-my-3 {
@@ -169,7 +161,7 @@
 }
 
 .auk-u-p-2 {
-  padding: 1.5rem !important;
+  padding: 1rem !important;
 }
 
 .auk-u-p-3 {
@@ -191,7 +183,7 @@
 }
 
 .auk-u-pb-2 {
-  padding: 0 0 1.5rem !important;
+  padding: 0 0 1rem !important;
 }
 
 .auk-u-pb-3 {
